 - Decreased conversion cost of "No Turret" tank turret type from 2.25 to 0.75
 - Made tank hulls not producable by default (experimental change)
 - Reduced Manipulate Politics influence cost from 10% to 5% loss to make it more useful
 - Cost tweak to policies so they're slightly more expensive
 - Adjusted some nations starting tax rates

Bugfixes:
 - Fixed NATO sharing group if NATO disabled due game rules
 - Fixed Resource Exports disappearing if you lease factories
 - Fixed missing upgrade for Air Superiority Fighters
 - Fixed American Naval OOBs so they didn't get 2015 modules in 2000
 - Fixed a CV MR text icon error
 - Fixed missing localization for Production Cost Max modifiers
 - Fixed PMC's trying to spawn units with non-existing c&c equipment
 - Fixed wrong number of max planes in airwing menu (instead of 100 from vanilla now 50)
 - Fixed broken localisation for revolts in Spain
 - Fixed broken icon for focus Spread Right Wing Propaganda in Spanish Focus Tree
 - Fixed issues with the North Korean Focus Tree
 - Belize, Northern Cyprus, Cyprus, Bahrain, Hezbollah now have gifted income to avoid debt shit
 - Fixed strange effects tooltip in event IMF Demands Land Reform
 - Fixed missing artillery technology for Liechtenstein
 - Fixed decision to reduce autonomy don't disappear if you lost puppet
 - Fixed prerequisites in decision Replace Saudi Arabia as Leader of the GCC
 - Kuwait now don't should have completed focuses in 2000
 - Fixed decision for China to reduce autonomy in Hong Kong
 - Fixed Korean Unified idea It wasn't modifying correctly due to bad variable names
 - Fixed Chinese Focus Zhejiang Megacity Project
 - Removed Uzbekistani divisions in Kyrgyzstan in 2000 scenario
 - Added bypass for British Focus Develop Infrastructure
 - Fixed GCC Focus Mass Deportation
 - Fixed Spanish communist everywhere decision (Commies needed to be in coalition to work)
 - Fixed weird tooltips with influence changes (was 2 same countries)