@@ -831,7 +831,7 @@ characters={
 			}
 		}
 		navy_leader={
-			traits={ chief_engineer green_water_expert superior_tactician fly_swatter }
+			traits={ chief_engineer fleet_protector superior_tactician fly_swatter }
 			skill=6
 			attack_skill=8
 			defense_skill=3
