@@ -2265,8 +2265,35 @@ generic_ITA = {
 			}
 			modifier = {
 				factor = 0
-				check_variable = { the_clergy_opinion > 95 }
+				check_variable = { the_clergy_opinion > 90 }
 			}
+		}
+	}
+
+	levy_extra_church_tax = {
+		icon = generic_decision
+		available = {
+			ITA_more_than_50_clergy_opinion = yes
+			has_idea = the_clergy
+		}
+		visible = {
+			has_idea = the_clergy
+        }
+		days_re_enable = 180
+		complete_effect = {
+			log = "[GetDateText]: [This.GetName]: decision levy_extra_church_tax executed"
+			add_to_variable = { levy_extra_church_tax_times_taken_var = 1 }
+			set_temp_variable = { levy_extra_church_tax_cost = levy_extra_church_tax_times_taken_var }
+			multiply_temp_variable = { levy_extra_church_tax_cost = -1 }
+			set_temp_variable = { decision_gdp_gain = gdp_total }
+			multiply_temp_variable = { decision_gdp_gain = 0.002 }
+			set_temp_variable = { treasury_change = decision_gdp_gain }
+			modify_treasury_effect = yes
+			set_temp_variable = { temp_opinion = levy_extra_church_tax_cost }
+			change_the_clergy_opinion = yes
+		}
+		ai_will_do = {
+			factor = 10
 		}
 	}
 
@@ -2312,9 +2339,10 @@ generic_ITA = {
 			add_political_power = provide_political_positions_to_union_men_cost
 		}
 		ai_will_do = {
-			factor = 1
+			factor = 0
 			modifier = {
-
+				add = 1
+				ITA_more_than_50_labour_unions_opinion = no
 			}
 		}
 	}
