@@ -13597,7 +13597,7 @@ focus_tree = {
 		relative_position_id = ITA_professional_army
 		x = 0
 		y = 1
-		cost = 4
+		cost = 5
 		search_filters = { FOCUS_FILTER_MILITARY_LAWS }
 
 		prerequisite = {
@@ -13616,6 +13616,8 @@ focus_tree = {
 			modify_army_defence_factor_effect = yes
 			set_temp_variable = { ITA_training_time_factor_change = 0.4 }
 			modify_training_time_factor_effect = yes
+			set_temp_variable = { ITA_army_personnel_cost_multiplier_modifier_change = 0.2 }
+			modify_army_personnel_cost_multiplier_modifier_effect = yes
 		}
 
 		ai_will_do = {
@@ -13637,7 +13639,7 @@ focus_tree = {
 		relative_position_id = ITA_professional_army
 		x = 2
 		y = 1
-		cost = 4
+		cost = 5
 		search_filters = { FOCUS_FILTER_MILITARY_LAWS }
 
 		prerequisite = {
@@ -13646,14 +13648,18 @@ focus_tree = {
 
 		completion_reward = {
 			log = "[GetDateText]: [Root.GetName]: Focus ITA_dedicated_logistics"
-			set_temp_variable = { ITA_supply_consumption_factor_change = 0.2 }
+			set_temp_variable = { ITA_supply_consumption_factor_change = 0.1 }
 			modify_supply_consumption_factor_effect = yes
-			set_temp_variable = { ITA_army_org_regain_change = 0.2 }
+			set_temp_variable = { ITA_army_org_regain_change = 0.1 }
 			modify_army_org_regain_effect = yes
-			set_temp_variable = { ITA_army_org_Factor_change = 0.2 }
+			set_temp_variable = { ITA_army_org_Factor_change = 0.1 }
 			modify_army_org_Factor_effect = yes
+			set_temp_variable = { ITA_org_loss_when_moving_change = -0.1 }
+			modify_org_loss_when_moving_effect = yes
 			set_temp_variable = { ITA_equipment_cost_multiplier_modifier_change = 0.025 }
 			modify_equipment_cost_multiplier_modifier_effect = yes
+			set_temp_variable = { ITA_army_personnel_cost_multiplier_modifier_change = 0.2 }
+			modify_army_personnel_cost_multiplier_modifier_effect = yes
 			hidden_effect = {
 				add_ideas = ITA_dedicated_logistics_spirit
 			}
@@ -13679,7 +13685,7 @@ focus_tree = {
 		relative_position_id = ITA_professional_army
 		x = -2
 		y = 1
-		cost = 4
+		cost = 5
 		search_filters = { FOCUS_FILTER_MILITARY_LAWS }
 
 		prerequisite = {
@@ -13692,6 +13698,8 @@ focus_tree = {
 			modify_attrition_effect = yes
 			set_temp_variable = { ITA_production_factory_efficiency_gain_factor_change = -0.2 }
 			modify_production_factory_efficiency_gain_factor_effect = yes
+			set_temp_variable = { ITA_equipment_cost_multiplier_modifier_change = 0.1 }
+			modify_equipment_cost_multiplier_modifier_effect = yes
 		}
 
 		ai_will_do = {
@@ -13977,6 +13985,8 @@ focus_tree = {
 			country_event = ita_military.1
 			set_temp_variable = { ITA_equipment_cost_multiplier_modifier_change = 0.025 }
 			modify_equipment_cost_multiplier_modifier_effect = yes
+			set_temp_variable = { treasury_change = -10 }
+			modify_treasury_effect = yes
 		}
 
 		ai_will_do = {
@@ -14010,6 +14020,8 @@ focus_tree = {
 			country_event = ita_military.2
 			set_temp_variable = { ITA_equipment_cost_multiplier_modifier_change = 0.025 }
 			modify_equipment_cost_multiplier_modifier_effect = yes
+			set_temp_variable = { treasury_change = -10 }
+			modify_treasury_effect = yes
 		}
 
 		ai_will_do = {
@@ -14043,6 +14055,8 @@ focus_tree = {
 			country_event = ita_military.3
 			set_temp_variable = { ITA_equipment_cost_multiplier_modifier_change = 0.025 }
 			modify_equipment_cost_multiplier_modifier_effect = yes
+			set_temp_variable = { treasury_change = -10 }
+			modify_treasury_effect = yes
 		}
 
 		ai_will_do = {
@@ -14076,6 +14090,8 @@ focus_tree = {
 			country_event = ita_military.4
 			set_temp_variable = { ITA_equipment_cost_multiplier_modifier_change = 0.025 }
 			modify_equipment_cost_multiplier_modifier_effect = yes
+			set_temp_variable = { treasury_change = -10 }
+			modify_treasury_effect = yes
 		}
 
 		ai_will_do = {
@@ -14109,6 +14125,8 @@ focus_tree = {
 			country_event = ita_military.5
 			set_temp_variable = { ITA_equipment_cost_multiplier_modifier_change = 0.025 }
 			modify_equipment_cost_multiplier_modifier_effect = yes
+			set_temp_variable = { treasury_change = -10 }
+			modify_treasury_effect = yes
 		}
 
 		ai_will_do = {
@@ -14142,6 +14160,8 @@ focus_tree = {
 			country_event = ita_military.6
 			set_temp_variable = { ITA_equipment_cost_multiplier_modifier_change = 0.025 }
 			modify_equipment_cost_multiplier_modifier_effect = yes
+			set_temp_variable = { treasury_change = -10 }
+			modify_treasury_effect = yes
 		}
 
 		ai_will_do = {
@@ -14175,6 +14195,8 @@ focus_tree = {
 			country_event = ita_military.7
 			set_temp_variable = { ITA_equipment_cost_multiplier_modifier_change = 0.025 }
 			modify_equipment_cost_multiplier_modifier_effect = yes
+			set_temp_variable = { treasury_change = -10 }
+			modify_treasury_effect = yes
 		}
 
 		ai_will_do = {
@@ -14208,6 +14230,8 @@ focus_tree = {
 			country_event = ita_military.8
 			set_temp_variable = { ITA_equipment_cost_multiplier_modifier_change = 0.025 }
 			modify_equipment_cost_multiplier_modifier_effect = yes
+			set_temp_variable = { treasury_change = -10 }
+			modify_treasury_effect = yes
 		}
 
 		ai_will_do = {
@@ -14241,6 +14265,8 @@ focus_tree = {
 			country_event = ita_military.9
 			set_temp_variable = { ITA_equipment_cost_multiplier_modifier_change = 0.025 }
 			modify_equipment_cost_multiplier_modifier_effect = yes
+			set_temp_variable = { treasury_change = -10 }
+			modify_treasury_effect = yes
 		}
 
 		ai_will_do = {
@@ -14274,6 +14300,8 @@ focus_tree = {
 			country_event = ita_military.10
 			set_temp_variable = { ITA_equipment_cost_multiplier_modifier_change = 0.025 }
 			modify_equipment_cost_multiplier_modifier_effect = yes
+			set_temp_variable = { treasury_change = -10 }
+			modify_treasury_effect = yes
 		}
 
 		ai_will_do = {
@@ -14307,6 +14335,8 @@ focus_tree = {
 			country_event = ita_military.11
 			set_temp_variable = { ITA_equipment_cost_multiplier_modifier_change = 0.025 }
 			modify_equipment_cost_multiplier_modifier_effect = yes
+			set_temp_variable = { treasury_change = -10 }
+			modify_treasury_effect = yes
 		}
 
 		ai_will_do = {
@@ -14525,6 +14555,8 @@ focus_tree = {
 			country_event = ita_military.12
 			set_temp_variable = { ITA_airforce_personnel_cost_multiplier_modifier_change = 0.05 }
 			modify_airforce_personnel_cost_multiplier_modifier_effect = yes
+			set_temp_variable = { treasury_change = -10 }
+			modify_treasury_effect = yes
 		}
 
 		ai_will_do = {
@@ -14562,6 +14594,8 @@ focus_tree = {
 			country_event = ita_military.13
 			set_temp_variable = { ITA_airforce_personnel_cost_multiplier_modifier_change = 0.05 }
 			modify_airforce_personnel_cost_multiplier_modifier_effect = yes
+			set_temp_variable = { treasury_change = -10 }
+			modify_treasury_effect = yes
 		}
 
 		ai_will_do = {
@@ -14599,6 +14633,8 @@ focus_tree = {
 			country_event = ita_military.14
 			set_temp_variable = { ITA_airforce_personnel_cost_multiplier_modifier_change = 0.05 }
 			modify_airforce_personnel_cost_multiplier_modifier_effect = yes
+			set_temp_variable = { treasury_change = -10 }
+			modify_treasury_effect = yes
 		}
 
 		ai_will_do = {
@@ -14638,6 +14674,8 @@ focus_tree = {
 			country_event = ita_military.15
 			set_temp_variable = { ITA_airforce_personnel_cost_multiplier_modifier_change = 0.05 }
 			modify_airforce_personnel_cost_multiplier_modifier_effect = yes
+			set_temp_variable = { treasury_change = -10 }
+			modify_treasury_effect = yes
 		}
 
 		ai_will_do = {
@@ -14677,6 +14715,8 @@ focus_tree = {
 			country_event = ita_military.16
 			set_temp_variable = { ITA_airforce_personnel_cost_multiplier_modifier_change = 0.05 }
 			modify_airforce_personnel_cost_multiplier_modifier_effect = yes
+			set_temp_variable = { treasury_change = -10 }
+			modify_treasury_effect = yes
 		}
 
 		ai_will_do = {
@@ -14716,6 +14756,8 @@ focus_tree = {
 			country_event = ita_military.17
 			set_temp_variable = { ITA_airforce_personnel_cost_multiplier_modifier_change = 0.05 }
 			modify_airforce_personnel_cost_multiplier_modifier_effect = yes
+			set_temp_variable = { treasury_change = -10 }
+			modify_treasury_effect = yes
 		}
 
 		ai_will_do = {
@@ -14755,6 +14797,8 @@ focus_tree = {
 			country_event = ita_military.18
 			set_temp_variable = { ITA_airforce_personnel_cost_multiplier_modifier_change = 0.05 }
 			modify_airforce_personnel_cost_multiplier_modifier_effect = yes
+			set_temp_variable = { treasury_change = -10 }
+			modify_treasury_effect = yes
 		}
 
 		ai_will_do = {
@@ -14794,6 +14838,8 @@ focus_tree = {
 			country_event = ita_military.19
 			set_temp_variable = { ITA_airforce_personnel_cost_multiplier_modifier_change = 0.05 }
 			modify_airforce_personnel_cost_multiplier_modifier_effect = yes
+			set_temp_variable = { treasury_change = -10 }
+			modify_treasury_effect = yes
 		}
 
 		ai_will_do = {
@@ -14833,6 +14879,8 @@ focus_tree = {
 			country_event = ita_military.20
 			set_temp_variable = { ITA_airforce_personnel_cost_multiplier_modifier_change = 0.05 }
 			modify_airforce_personnel_cost_multiplier_modifier_effect = yes
+			set_temp_variable = { treasury_change = -10 }
+			modify_treasury_effect = yes
 		}
 
 		ai_will_do = {
@@ -14868,6 +14916,8 @@ focus_tree = {
 			country_event = ita_military.21
 			set_temp_variable = { ITA_airforce_personnel_cost_multiplier_modifier_change = 0.05 }
 			modify_airforce_personnel_cost_multiplier_modifier_effect = yes
+			set_temp_variable = { treasury_change = -10 }
+			modify_treasury_effect = yes
 		}
 
 		ai_will_do = {
@@ -14920,7 +14970,7 @@ focus_tree = {
 		relative_position_id = ITA_future_navy
 		x = -4
 		y = 1
-		cost = 4
+		cost = 6
 		search_filters = { FOCUS_FILTER_MILITARY_LAWS }
 
 		prerequisite = {
@@ -14936,10 +14986,19 @@ focus_tree = {
 			modify_navy_personnel_cost_multiplier_modifier_effect = yes
 			set_temp_variable = { ITA_navy_fuel_consumption_factor_change = -0.1 }
 			modify_navy_fuel_consumption_factor_effect = yes
-			set_temp_variable = { ITA_navy_max_range_factor_change = -0.1 }
+			set_temp_variable = { ITA_navy_max_range_factor_change = -0.25 }
 			modify_navy_max_range_factor_effect = yes
 			set_temp_variable = { ITA_positioning_change = 0.1 }
 			modify_positioning_effect = yes
+			add_trait = {
+				character = ITA_rinaldo_veri
+				trait = green_water_expert
+		 	}
+			add_tech_bonus = {
+				uses = 2
+				bonus = 0.5
+				category = Cat_green_water_navy
+			}
 		}
 
 		ai_will_do = {
@@ -15141,7 +15200,7 @@ focus_tree = {
 		relative_position_id = ITA_future_navy
 		x = 4
 		y = 1
-		cost = 4
+		cost = 6
 		search_filters = { FOCUS_FILTER_MILITARY_LAWS }
 
 		prerequisite = {
@@ -15153,14 +15212,23 @@ focus_tree = {
 
 		completion_reward = {
 			log = "[GetDateText]: [Root.GetName]: Focus ITA_oceanic_navy"
-			set_temp_variable = { ITA_navy_personnel_cost_multiplier_modifier_change = 0.1 }
+			set_temp_variable = { ITA_navy_personnel_cost_multiplier_modifier_change = 0.15 }
 			modify_navy_personnel_cost_multiplier_modifier_effect = yes
-			set_temp_variable = { ITA_navy_fuel_consumption_factor_change = 0.1 }
+			set_temp_variable = { ITA_navy_fuel_consumption_factor_change = 0.25 }
 			modify_navy_fuel_consumption_factor_effect = yes
 			set_temp_variable = { ITA_navy_max_range_factor_change = 0.1 }
 			modify_navy_max_range_factor_effect = yes
 			set_temp_variable = { ITA_screening_without_screens_change = 0.25 }
 			modify_screening_without_screens_effect = yes
+			add_trait = {
+				character = ITA_rinaldo_veri
+				trait = blue_water_expert
+		 	}
+			add_tech_bonus = {
+				uses = 2
+				bonus = 0.5
+				category = Cat_blue_water_navy
+			}
 		}
 
 		ai_will_do = {
@@ -15632,6 +15700,7 @@ focus_tree = {
 			add_tech_bonus = {
 				ahead_reduction = 15
 				uses = 1
+				bonus = 1
 				technology = tech_torpedoes_3
 			}
 			set_temp_variable = { treasury_change = -5 }
@@ -19022,10 +19091,18 @@ focus_tree = {
 			log = "[GetDateText]: [Root.GetName]: Focus ITA_a_devout_state"
 			set_temp_variable = { temp_opinion = 5 }
 			change_the_clergy_opinion = yes
+			set_temp_variable = { percent_change = 5 }
+			set_temp_variable = { tag_index = HLS.id }
+			set_temp_variable = { influence_target = THIS.id }
+			change_influence_percentage = yes
 		}
 
 		ai_will_do = {
 			factor = 80
+			modifier = {
+				add = influence_array_val^0
+				check_variable = { influence_array^0 = HLS }
+			}
 		}
 	}
 
@@ -19042,6 +19119,7 @@ focus_tree = {
 			focus = ITA_a_devout_state
 		}
 		available = {
+			ITA_more_than_50_clergy_opinion = yes
 			OR = {
 				not_has_secular_government_or_in_coalition = yes
 				has_country_leader_with_trait = western_technocrat
@@ -19053,10 +19131,18 @@ focus_tree = {
 			set_temp_variable = { temp_opinion = 5 }
 			change_the_clergy_opinion = yes
 			add_ideas = ITA_extra_church_support
+			set_temp_variable = { percent_change = 15 }
+			set_temp_variable = { tag_index = HLS.id }
+			set_temp_variable = { influence_target = THIS.id }
+			change_influence_percentage = yes
 		}
 
 		ai_will_do = {
 			factor = 160
+			modifier = {
+				add = influence_array_val^0
+				check_variable = { influence_array^0 = HLS }
+			}
 		}
 	}
 
@@ -19072,6 +19158,9 @@ focus_tree = {
 		prerequisite = {
 			focus = ITA_economic_support_for_the_church
 		}
+		available = {
+			ITA_more_than_50_clergy_opinion = yes
+		}
 		bypass = {
 			NOT = {
 				has_idea = ITA_mafia
@@ -19082,10 +19171,18 @@ focus_tree = {
 			log = "[GetDateText]: [Root.GetName]: Focus ITA_seek_support_of_the_church"
 			custom_effect_tooltip = mafia_strength_reduction_over_time_TT
 			custom_effect_tooltip = eradicating_mafia_focus_TT
+			set_temp_variable = { percent_change = 15 }
+			set_temp_variable = { tag_index = HLS.id }
+			set_temp_variable = { influence_target = THIS.id }
+			change_influence_percentage = yes
 		}
 
 		ai_will_do = {
 			factor = 80
+			modifier = {
+				add = influence_array_val^0
+				check_variable = { influence_array^0 = HLS }
+			}
 		}
 	}
 
@@ -19115,10 +19212,11 @@ focus_tree = {
 			set_temp_variable = { tag_index = HLS.id }
 			set_temp_variable = { influence_target = THIS.id }
 			change_influence_percentage = yes
+			add_political_power = 500
 		}
 
 		ai_will_do = {
-			factor = 2
+			factor = 4
 			modifier = {
 				factor = influence_array_val^0
 				check_variable = { influence_array^0 = HLS }
