@@ -177,6 +177,7 @@ set_research_slots = 6
 	set_variable = { extraordinary_church_donation_times_taken_var = 1 }
 	set_variable = { economic_concessions_to_oppositions_times_taken_var = 1 }
 	set_variable = { provide_political_positions_to_union_men_times_taken_var = 1 }
+	set_variable = { levy_extra_church_tax_times_taken_var = 3 }
 	set_variable = { ITA_drought_counter_var = 12 }
 	#mafia events
 	set_variable = { event_counter_1_sicily = 2 }
