@@ -1065,6 +1065,7 @@
  ITA_stricter_training_desc: ""
  ITA_dedicated_logistics: "Dedicated Logistics"
  ITA_dedicated_logistics_desc: ""
+ ITA_dedicated_logistics_spirit: "Dedicated Logistics"
  ITA_advanced_equipment_standards: "Advanced Equipment Standards"
  ITA_advanced_equipment_standards_desc: ""
  ITA_volounteer_forces: "Volounteer Forces"
@@ -1075,32 +1076,55 @@
  ITA_streamline_mass_recruitment_desc: ""
  ITA_streamlined_logistics: "Streamlined Logistics"
  ITA_streamlined_logistics_desc: ""
+ ITA_streamlined_logistics_spirit: "Streamlined Logistics"
  ITA_mass_produced_equipment: "Mass Produced Equipment"
  ITA_mass_produced_equipment_desc: ""
  ITA_home_exercises: "Home Exercises"
  ITA_home_exercises_desc: ""
  ITA_specialize_ariete: "Specialize Ariete Tank"
  ITA_specialize_ariete_desc: ""
+ ITA_specialize_ariete_spirit_1: "Specialize Ariete Tank"
+ ITA_specialize_ariete_spirit_2: "Specialize Ariete Tank"
  ITA_specialize_freccia: "Specialize Freccia IFV"
  ITA_specialize_freccia_desc: ""
+ ITA_specialize_freccia_spirit_1: "Specialize Freccia IFV"
+ ITA_specialize_freccia_spirit_2: "Specialize Freccia IFV"
  ITA_specialize_dardo: "Specialize Dardo APC"
  ITA_specialize_dardo_desc: ""
+ ITA_specialize_dardo_spirit_1: "Specialize Dardo APC"
+ ITA_specialize_dardo_spirit_2: "Specialize Dardo APC"
  ITA_specialize_centauro: "Specialize Centauro Light Tank"
  ITA_specialize_centauro_desc: ""
+ ITA_specialize_centauro_spirit_1: "Specialize Centauro Light Tank"
+ ITA_specialize_centauro_spirit_2: "Specialize Centauro Light Tank"
  ITA_specialize_lince: "Specialize Lince Truck"
  ITA_specialize_lince_desc: ""
+ ITA_specialize_lince_spirit_1: "Specialize Lince Truck"
+ ITA_specialize_lince_spirit_2: "Specialize Lince Truck"
  ITA_specialize_arx: "Specialize ARX Gun"
  ITA_specialize_arx_desc: ""
+ ITA_specialize_arx_spirit_1: "Specialize ARX Gun"
+ ITA_specialize_arx_spirit_2: "Specialize ARX Gun"
  ITA_specialize_siaccon: "Specialize SIACCON equipment"
  ITA_specialize_siaccon_desc: ""
+ ITA_specialize_siaccon_spirit_1: "Specialize SIACCON equipment"
+ ITA_specialize_siaccon_spirit_2: "Specialize SIACCON equipment"
  ITA_specialize_spike: "Specialize Spike Missile"
  ITA_specialize_spike_desc: ""
+ ITA_specialize_spike_spirit_1: "Specialize Spike Missile"
+ ITA_specialize_spike_spirit_2: "Specialize Spike Missile"
  ITA_specialize_stinger: "Specialize Stinger Missile"
  ITA_specialize_stinger_desc: ""
+ ITA_specialize_stinger_spirit_1: "Specialize Stinger Missile"
+ ITA_specialize_stinger_spirit_2: "Specialize Stinger Missile"
  ITA_specialize_obice_fh: "Specialize FH70 Howitzer"
  ITA_specialize_obice_fh_desc: ""
+ ITA_specialize_obice_fh_spirit_1: "Specialize FH70 Howitzer"
+ ITA_specialize_obice_fh_spirit_2: "Specialize FH70 Howitzer"
  ITA_specialize_semovente: "Specialize Self-Propelled Artillery"
  ITA_specialize_semovente_desc: ""
+ ITA_specialize_semovente_spirit_1: "Specialize Self-Propelled Artillery"
+ ITA_specialize_semovente_spirit_2: "Specialize Self-Propelled Artillery"
  ITA_future_airforce: "Future Airforce"
  ITA_future_airforce_desc: ""
  ITA_air_dominance: "Air Dominance"
@@ -1113,54 +1137,86 @@
  ITA_home_air_defense_desc: ""
  ITA_air_superiority_fighter: "Air Superiority Fighters"
  ITA_air_superiority_fighter_desc: ""
+ ITA_specialized_as_fighter_spirit_1: "Specialized Air Superiority Fighters"
+ ITA_specialized_as_fighter_spirit_2: "Specialized Air Superiority Fighters"
  ITA_multirole_fighters: "Multirole Fighters"
  ITA_multirole_fighters_desc: ""
+ ITA_multirole_fighter_spirit_1: "Specialized Multirole Fighters"
+ ITA_multirole_fighter_spirit_2: "Specialized Multirole Fighters"
  ITA_light_fighters: "Light Fighters"
  ITA_light_fighters_desc: ""
+ ITA_light_fighters_spirit_1: "Specialized Light Fighters"
+ ITA_light_fighters_spirit_2: "Specialized Light Fighters"
  ITA_close_air_support: "Close Air Support"
  ITA_close_air_support_desc: ""
+ ITA_specialized_cas_spirit_1: "Specialized Close Air Support"
+ ITA_specialized_cas_spirit_2: "Specialized Close Air Support"
  ITA_strike_fighters: "Strike Fighters"
  ITA_strike_fighters_desc: ""
+ ITA_multirole_attack_plane_spirit_1: "Specialized Strike Fighters"
+ ITA_multirole_attack_plane_spirit_2: "Specialized Strike Fighters"
  ITA_ground_attack_drones: "Ground Attack Drones"
  ITA_ground_attack_drones_desc: ""
+ ITA_ground_attack_drones_spirit_1: "Specialized Ground Attack Drones"
+ ITA_ground_attack_drones_spirit_2: "Specialized Ground Attack Drones"
  ITA_naval_bomber: "Naval Bomber"
  ITA_naval_bomber_desc: ""
+ ITA_naval_bomber_spirit_1: "Specialized Naval Bomber"
+ ITA_naval_bomber_spirit_2: "Specialized Naval Bomber"
  ITA_naval_multirole: "Naval Multirole"
  ITA_naval_multirole_desc: ""
+ ITA_naval_multirole_spirit_1: "Specialized Naval Multirole"
+ ITA_naval_multirole_spirit_2: "Specialized Naval Multirole"
  ITA_naval_light_multirole: "Light Naval Multirole"
  ITA_naval_light_multirole_desc: ""
+ ITA_naval_light_multirole_spirit_1: "Specialized Light Naval Multirole"
+ ITA_naval_light_multirole_spirit_2: "Specialized Light Naval Multirole"
  ITA_strategic_bomber: "Strategic Bomber"
  ITA_strategic_bomber_desc: ""
+ ITA_strategic_bomber_spirit_1: "Specialized Strategic Bomber"
+ ITA_strategic_bomber_spirit_2: "Specialized Strategic Bomber"
  ITA_future_navy: "Future Navy"
  ITA_future_navy_desc: ""
  ITA_mediterranean_navy: "Mediterranean Navy"
  ITA_mediterranean_navy_desc: ""
  ITA_land_based_naval_airforce: "Land Based Naval Airforce"
  ITA_land_based_naval_airforce_desc: ""
+ ITA_land_based_naval_airforce_spirit: "Focus: Land Based Naval Airforce"
  ITA_attack_submarines: "Attack Submarines"
  ITA_attack_submarines_desc: ""
+ ITA_attack_submarines_spirit: "Focus: Attack Submarines"
  ITA_frontline_corvettes: "Frontline Corvettes"
  ITA_frontline_corvettes_desc: ""
+ ITA_frontline_corvettes_spirit: "Focus: Frontline Corvettes"
  ITA_frigate_backbone: "Frigate Backbone"
  ITA_frigate_backbone_desc: ""
+ ITA_frigate_backbone_spirit: "Focus: Frigate Backbone"
  ITA_dedicated_AA_destroyers: "Dedicated AA Destroyers"
  ITA_dedicated_AA_destroyers_desc: ""
+ ITA_dedicated_AA_destroyers_spirit: "Focus: Dedicated AA Destroyers"
  ITA_oceanic_navy: "Oceanic Navy"
  ITA_oceanic_navy_desc: ""
  ITA_supercarrier_development: "Supercarrier Development"
  ITA_supercarrier_development_desc: ""
+ ITA_supercarrier_development_spirit: "Focus: Supercarrier Development"
  ITA_missile_submarines: "Missile Submarines"
  ITA_missile_submarines_desc: ""
+ ITA_missile_submarines_spirit: "Focus: Missile Submarines"
  ITA_frontline_frigates: "Frontline Frigates"
  ITA_frontline_frigates_desc: ""
+ ITA_frontline_frigates_spirit: "Focus: Frontline Frigates"
  ITA_destroyer_backbone: "Destroyer Backbone"
  ITA_destroyer_backbone_desc: ""
+ ITA_destroyer_backbone_spirit: "Focus: Destroyer Backbone"
  ITA_dedicated_AA_cruisers: "Dedicated AA Cruisers"
  ITA_dedicated_AA_cruisers_desc: ""
+ ITA_dedicated_AA_cruisers_spirit: "Focus: Dedicated AA Cruisers"
  ITA_ASW_corvettes: "ASW Corvettes"
  ITA_ASW_corvettes_desc: ""
+ ITA_ASW_corvettes_spirit: "Focus: ASW Corvettes"
  ITA_dedicated_landing_ships: "Dedicated Landing Ships"
  ITA_dedicated_landing_ships_desc: ""
+ ITA_dedicated_landing_ships_spirit: "Focus: Dedicated Landing Ships"
  ITA_legacy_of_the_arsenale: "Legacy of the Arsenale"
  ITA_legacy_of_the_arsenale_desc: ""
  ITA_focus_fincantieri_surface: "Focus Fincantieri on Ships"
@@ -2206,6 +2262,7 @@
  economic_concessions_to_oppositions_desc: "Addressing the concerns of the opposing parties powerbases might secure us the political room to manouver."
  extraordinary_church_donation: "Extraordinary Church Donation"
  call_in_favours_with_unions: "Call in Favours with Labour Unions"
+ levy_extra_church_tax: "Levy Extra Church Tax"
  provide_political_positions_to_union_men: "Provide Political Positions to Labour Unions Representatives"
  ITA_more_than_50_clergy_opinion_TT: "More than 50 Clergy Opinion"
  ITA_more_than_50_labour_unions_opinion_TT: "More than 50 Labour Unions Opinion"
