@@ -17,6 +17,7 @@ Balance:
  - Reduced Manipulate Politics influence cost from 10% to 5% loss to make it more useful
  - Cost tweak to policies so they're slightly more expensive
  - Adjusted some nations starting tax rates
+ - Balanced several italian modifiers, added a couple of recurring decisions
 
 Bugfixes:
  - Fixed NATO sharing group if NATO disabled due game rules
